Add new endpoint for retrieving pending reviews and refactor review creation and editing logic